# UEA-MADS_tereas

./: .gitignore  README.md  app.py  config.py  models.py  pyproject.toml
control_parental_app/: pyproject.toml
control_parental_app/windows/: apps.py  apps_gg.json  closeAppsAuto.py  db.py  gui.py  icons.py  test.ipynb
data/: sistema.db
static/: modal.js  styles.css
supermarket_app/: app.py  models.py  pyproject.toml
supermarket_app/data/: sistema.db
supermarket_app/static/: animations.js
supermarket_app/templates/departamentos/: consultar_departamentos.html
supermarket_app/templates/precios/: consultar_precios.html
supermarket_app/templates/productos/: alta_producto.html
templates/: index.html
templates/asignaciones/: alta_producto_depto.html  baja_producto_depto.html
templates/departamentos/: alta_departamento.html  baja_departamento.html  consultar_departamentos.html
templates/precios/: asignar_precio.html  consultar_precios.html
templates/productos/: baja_producto.html  consultar_productos.html
