[project]
name = "project-1"
version = "0.1.0"
description = "Proyecto 1 de la UEA de Metodologías Agiles de Desarrollo de Software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
